# diplomat2

./: .gitignore  Cargo.toml
example/: Cargo.toml
example/c/: .gitignore  CMakeLists.txt  conanfile.py
example/c/.devcontainer/: devcontainer.json
rice_01_ffi/: Cargo.toml  build.rs
rice_01_ffi/c/: CMakeLists.txt  conanfile.py
rice_01_ffi/c/include/: Demo01.d.h  Demo01.h
rice_01_ffi/c/src/: demo01_run.cpp  demo01_run.h  main.cpp
rice_01_ffi/c/test_package/: conanfile.py
rice_01_ffi/src/: demo_01.rs  lib.rs
