[package]
name = "diplomat-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
diplomat = { version = "0.9.0", default-features = false }
diplomat-runtime = { version = "0.9.0", default-features = false }
icu = "1.2"
writeable = "0.5.2"
fixed_decimal = "0.5.3"
icu_provider = { version = "1.2", features = ["serde"] }
icu_testdata = { version = "1.2" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "icu4x_bench"
harness = false
